--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
 }
+
 h2 {
   text-align: center;
   margin: 0 0 20px;
@@ -36,9 +37,10 @@ h2 {
 
 .form-control {
   margin-bottom: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   position: relative;
 }
+
 .form-control label {
   color: #777;
   display: block;
@@ -47,19 +49,19 @@ h2 {
 
 .form-control input {
   border: 2px solid #f0f0f0;
-  padding: 10px;
-  display: block;
   border-radius: 4px;
-  font-size: 14px;
+  display: block;
   width: 100%;
+  padding: 10px;
+  font-size: 14px;
 }
 
 .form-control input:focus {
   outline: 0;
-  border-color: #bab8b8;
+  border-color: #777;
 }
 
-.form-control.succcess input {
+.form-control.success input {
   border-color: var(--success-color);
 }
 
